--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: java
+
+sudo: true
+
 jdk:
   - oraclejdk8
   - oraclejdk7
   - openjdk6
-sudo: false
+  
 addons:
   apt:
     packages:
       - oracle-java8-installer
- java: 
-      packages: 
-      
+ 
