--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,10 @@
     <artifactId>gson-parent</artifactId>
     <version>2.8.1</version>
 </dependency>
+<dependency>
+    <groupId>net.lingala.zip4j</groupId>
+    <artifactId>zip4j</artifactId>
+    <version>1.3.2</version>
+</dependency>
 </dependencies>
 </project>
